--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.android.material:material:1.1.0-alpha06'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
+    implementation 'com.google.firebase:firebase-core:16.0.9'
+
 }
+
+
+apply plugin: 'com.google.gms.google-services'
