--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:17.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.9'
 
+
+    /* lifecycle component */
+    def lifecycle_version = "2.0.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+
 }
 
 
