--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,13 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.google.firebase:firebase-auth:17.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation  group: 'com.google.android.material', name: 'material', version: '1.1.0-alpha07'
+    implementation 'com.android.support:design:28.0.0'
+
+
+
+
 
 
     /* lifecycle component */
